environment/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: sinatra
 labels:
    app.kubernetes.io/name: sinatra
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sinatra
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sinatra
    spec:
      containers:
      - env:
        - name: PORT
          value: "4567"
        image: public.ecr.aws/v7p4n2i9/sinatra-example:latest
        imagePullPolicy: Always
        name: sinatra
        ports:
        - containerPort: 4567
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: 4567
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
