environment/k8s/service-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: service-externalname
  namespace: prod
spec:
  type: ExternalName
  externalName: my.database.example.com
