environment/k8s/service-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: service-loadbalancer
spec:
  selector:
    app.kubernetes.io/name: sinatra
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4567
  clusterIP: 10.96.10.10
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.0.2.127
